# dsp-plotter

./: .gitignore  CMakeLists.txt  README.md  testbench_config.json
inc/: dsp-plotter.h
libs/glfw/: glfw3.lib
libs/implot/: implot.h
libs/json/: json.hpp
src/: app.cpp  app.h  configsave.cpp  configsave.h  controller.cpp  controller.h  dialogs.cpp  dialogs.h  dsp-plotter.cpp  main.cpp  view.cpp  view.h
